platform/kubernetes/authelia/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
spec:
  selector:
    app.kubernetes.io/name: authelia
  ports:
    - { name: http, port: 9091, targetPort: http }
